# hyperarrow

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_arrow.sh  build_example.sh  build_hyper.sh  docker-compose.yml  example.cc  run.sh
.github/workflows/: .#run_tests.yml  build_python_wheels.yml  run_tests.yml
apps/: CMakeLists.txt  hyperarrow.cc  test_reader.cc
ci/docker/: hyperarrow-dev.dockerfile  python-wheel-manylinux-201x.dockerfile  python-wheel-windows.dockerfile
ci/scripts/: get_tableau_libs.bat  get_tableau_libs.sh  get_tableau_python_libs.sh  hack_pyarrow_runtime_libs.sh  install_arrow.bat  install_arrow.sh  python_wheel_manylinux_build.sh  python_wheel_windows_build.bat
docs/: changelog.rst  conf.py  cpp.rst  index.rst  python.rst
include/hyperarrow/: reader.h  writer.h
python/: README.md  TABLEUA_LICENSE  environment.yml  setup.py
python/hyperarrow/: __init__.py  _tester.py  hyperarrow.cpp
python/hyperarrow/src/: hyperarrow.c  hyperarrow.cpp  writer.c  writer.cc  writer.h
python/hyperarrow/tests/: conftest.py  test_exceptions.py  test_roundtrip.py
python/src/: __init__.py
python/src/hyperarrow/: __init__.py  _tester.py  hyperarrow.cpp
python/tests/: conftest.py  test_exceptions.py  test_roundtrip.py
src/: CMakeLists.txt  reader.cc  types.cc  types.h  writer.cc
src/hyperarrow/: hyperarrow.cc  types.cc  types.h  writer.cc  writer.h
tests/: CMakeLists.txt  test_reader.cc  test_roundtrip.cc  test_writer.cc
tests/data/: example.hyper
